Print out all the hellos

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -15,4 +15,6 @@ jobs:
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
+      - run:
+          cat ${{ github.workspace }}/hello-world.txt
       - run: echo "🍏 This job's status is ${{ job.status }}."
